Edit files